[gd_scene load_steps=3 format=3 uid="uid://cbpgs8nsbcst1"]

[ext_resource type="PackedScene" uid="uid://bt445iqt61atd" path="res://addons/HTNDomainManager/PluginSystem/Nodes/BaseNode/htn_base_node.tscn" id="1_t5y5f"]
[ext_resource type="Script" path="res://addons/HTNDomainManager/PluginSystem/Nodes/ApplicatorNode/HTNApplicatorNode.gd" id="2_k7ghy"]

[node name="HTNApplicatorNode" instance=ExtResource("1_t5y5f")]
title = "Applicator"
slot/0/left_enabled = true
slot/0/left_type = 2
slot/0/left_color = Color(0.27451, 0.509804, 0.196078, 1)
slot/0/right_enabled = true
slot/0/right_type = 2
slot/0/right_color = Color(0.27451, 0.509804, 0.196078, 1)
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
script = ExtResource("2_k7ghy")

[node name="HBoxContainer" parent="." index="1"]
mouse_filter = 2

[node name="Input" parent="HBoxContainer" index="0"]
text = "Action"

[node name="HSeparator" parent="HBoxContainer" index="1"]
mouse_filter = 2

[node name="Output" parent="HBoxContainer" index="2"]
text = "Action"

[node name="EditButton" type="Button" parent="." index="2"]
layout_mode = 2
text = "Edit Effects"

[connection signal="pressed" from="EditButton" to="." method="_on_edit_button_pressed"]
